# shell-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-shell.sh  compile.sh
.cache/clangd/index/: builtins.c.43BA467DC2DE65A4.idx  main.c.5ADAB72DC5B55564.idx  shell.c.097F37767F829893.idx  shell.h.7A8566B7849648CA.idx
scripts/: build_config.sh
src/: builtins.c  main.c  shell.c  shell.h  shell_commands.h
